[gd_scene load_steps=23 format=3 uid="uid://qhcex4ei7jh"]

[ext_resource type="Script" path="res://Game/Bosses/The Moon/Scripts/TheMoon.gd" id="1_8ocbu"]
[ext_resource type="PackedScene" uid="uid://dsgew30aw6bek" path="res://Game/Bullets/boss moon bullets/quesso_phase1_bullet.tscn" id="2_m5b1o"]
[ext_resource type="Script" path="res://Components/Damage/Hitbox.gd" id="3_it85t"]
[ext_resource type="Texture2D" uid="uid://3ifbvlorak4p" path="res://Assets/Bosses/The Moon/full_moon.png" id="3_thfs5"]
[ext_resource type="PackedScene" uid="uid://qdclgjwiv2t3" path="res://Game/Bullets/boss moon bullets/quesso_phase2_bullet.tscn" id="3_wmqjt"]
[ext_resource type="Script" path="res://Components/Damage/Hurtbox.gd" id="4_bvep4"]
[ext_resource type="Texture2D" uid="uid://ddi3tts7iq27k" path="res://Assets/Bosses/The Moon/half_moon.png" id="4_qcs4y"]
[ext_resource type="Script" path="res://Components/Stats/Stats.gd" id="5_hv6s8"]
[ext_resource type="Script" path="res://Components/Spawners/Spawn.gd" id="5_jswo6"]
[ext_resource type="Script" path="res://Components/Damage/Hurt.gd" id="9_7g424"]
[ext_resource type="Script" path="res://Components/Effects/destroyed_effect.gd" id="10_rnx65"]
[ext_resource type="Script" path="res://Components/Effects/shake_effect.gd" id="11_qw47l"]
[ext_resource type="PackedScene" uid="uid://bkcb672ohnlf3" path="res://Resources/Visual/Explosions/explosion_veffect.tscn" id="11_vob2e"]
[ext_resource type="Script" path="res://Components/Effects/flash_effect.gd" id="12_h2nin"]
[ext_resource type="Material" uid="uid://c88q6pkhh3vl" path="res://Resources/Visual/Flashes/white_flash_material.tres" id="13_utv8u"]
[ext_resource type="Script" path="res://Components/Effects/scale_effect.gd" id="13_xqe7b"]
[ext_resource type="PackedScene" uid="uid://mh3cy68pxnsl" path="res://Game/Bosses/The Moon/Meteor.tscn" id="16_21rcd"]
[ext_resource type="AudioStream" uid="uid://cegthfrxctsdv" path="res://Music and Sounds/Sound Effects/zap4.mp3" id="17_7m7nt"]

[sub_resource type="SpriteFrames" id="SpriteFrames_bpiej"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_thfs5")
}],
"loop": false,
"name": &"phase1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_thfs5")
}],
"loop": true,
"name": &"phase2",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_evp6f"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_qcs4y")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_7xmcv"]
radius = 31.0

[sub_resource type="CircleShape2D" id="CircleShape2D_lx3dh"]
radius = 32.0156

[node name="TheMoon" type="CharacterBody2D" node_paths=PackedStringArray("barrel_origin")]
position = Vector2(-1, 0)
motion_mode = 1
script = ExtResource("1_8ocbu")
bullet_phase1 = ExtResource("2_m5b1o")
bullet_phase2 = ExtResource("3_wmqjt")
bullet_count = 12
arc = 180.0
barrel_origin = NodePath(".")

[node name="bossSprites" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_bpiej")
animation = &"phase1"
autoplay = "phase1"

[node name="HalfSprites" type="AnimatedSprite2D" parent="bossSprites"]
sprite_frames = SubResource("SpriteFrames_evp6f")
autoplay = "default"

[node name="bossHitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
monitorable = false
script = ExtResource("3_it85t")

[node name="CollisionShape2D" type="CollisionShape2D" parent="bossHitbox"]
shape = SubResource("CircleShape2D_7xmcv")
debug_color = Color(0.875917, 0.266809, 0.555277, 0.42)

[node name="bossHurtbox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 0
monitoring = false
script = ExtResource("4_bvep4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="bossHurtbox"]
shape = SubResource("CircleShape2D_lx3dh")
debug_color = Color(0.302776, 0.614443, 0.375808, 0.42)

[node name="Stats" type="Node" parent="."]
script = ExtResource("5_hv6s8")
health = 100

[node name="Hurt" type="Node" parent="." node_paths=PackedStringArray("stats", "hurtbox")]
script = ExtResource("9_7g424")
stats = NodePath("../Stats")
hurtbox = NodePath("../bossHurtbox")

[node name="DestroyedEffect" type="Node" parent="." node_paths=PackedStringArray("actor", "stats", "dest_ef_spawner")]
script = ExtResource("10_rnx65")
actor = NodePath("..")
stats = NodePath("../Stats")
dest_ef_spawner = NodePath("DestroyedSpawner")

[node name="DestroyedSpawner" type="Node2D" parent="DestroyedEffect"]
position = Vector2(-1, 0)
script = ExtResource("5_jswo6")
scene = ExtResource("11_vob2e")

[node name="ShakeEffect" type="Node" parent="." node_paths=PackedStringArray("node_to_shake")]
script = ExtResource("11_qw47l")
node_to_shake = NodePath("../bossSprites")

[node name="FlashEffect" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("12_h2nin")
flash_material = ExtResource("13_utv8u")
sprite = NodePath("../bossSprites")
flash_duration = 0.05

[node name="ScaleEffect" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("13_xqe7b")
sprite = NodePath("../bossSprites")

[node name="Meteors" type="Node2D" parent="."]

[node name="Meteor1" parent="Meteors" instance=ExtResource("16_21rcd")]
position = Vector2(-39, -32)
bullet_count = 2
arc = 30.0
fire_rate = 0.6

[node name="Meteor2" parent="Meteors" instance=ExtResource("16_21rcd")]
position = Vector2(-7, -48)
bullet_count = 3
arc = 45.0
fire_rate = 0.6

[node name="Meteor3" parent="Meteors" instance=ExtResource("16_21rcd")]
position = Vector2(-55, 0)
fire_rate = 0.6

[node name="Meteor4" parent="Meteors" instance=ExtResource("16_21rcd")]
position = Vector2(-39, 32)
bullet_count = 2
arc = 30.0
fire_rate = 0.6

[node name="Meteor5" parent="Meteors" instance=ExtResource("16_21rcd")]
position = Vector2(-7, 48)
bullet_count = 3
arc = 45.0
fire_rate = 0.6

[node name="AudioEffect" type="AudioStreamPlayer" parent="."]
stream = ExtResource("17_7m7nt")
